--- a/personel_ayarlari.html
+++ b/personel_ayarlari.html
@@ -66,22 +66,22 @@
                         <li class="has_sub">
                             <a href="" class="waves-effect"><i class="ti-paint-bucket"></i><span class="label label-success pull-right">3</span><span>Renk</span></a>
                             <ul class="list-unstyled">
-                                <li><a href="renk_ekle.html" class="waves-effect active"><i class="ti-plus"></i> <span>Renk Ekle</span></a></li>
-                                <li><a href="renk_ara.html" class="waves-effect active"><i class="ti-search"></i> <span>Renk Ara</span></a></li>
+                                <li><a href="renk_ekle.html" class="waves-effect "><i class="ti-plus"></i> <span>Renk Ekle</span></a></li>
+                                <li><a href="renk_ara.html" class="waves-effect "><i class="ti-search"></i> <span>Renk Ara</span></a></li>
                                 <li><a href="boya_yapma.html" class="waves-effect "><i class="ti-paint-roller"></i> <span>Boya Yap </span></a></li>
                             </ul>
                         </li>
                         <li class="">
-                            <a href="personel.html" class="waves-effect "><i class="ti-user"></i> <span>Personel</span></a>
+                            <a href="musteri.html" class="waves-effect "><i class="ti-user"></i> <span>Müşteri</span></a>
                         </li>
                         <li class="">
                             <a href="rapor.html" class="waves-effect "><i class="ti-agenda"></i> <span>Rapor</span></a>
                         </li>
                         <li class="has_sub">
-                            <a href="index.html#" class="waves-effect"><i class="ti-widget"></i><span class="label label-success pull-right">3</span><span>Ayarlar</span></a>
+                            <a href="index.html#" class="waves-effect"><i class="ti-widget"></i><span class="label label-success pull-right">4</span><span>Ayarlar</span></a>
                             <ul class="list-unstyled">
                                 <li><a href="donanim_ayarlari.html" class="waves-effect"><i class="ti-harddrives"></i> <span>Donanım</span></a></li>
-                                <li><a href="personel_ayarlari.html" class="waves-effect "><i class="ti-user"></i> <span>Personel</span></a></li>
+                                <li><a href="personel_ayarlari.html" class="waves-effect active"><i class="ti-user"></i> <span>Personel</span></a></li>
                                 <li><a href="renk_gorunurlugu.html" class="waves-effect "><i class="ti-rss-alt"></i> <span>Görünürlük</span></a></li>
                                 <li><a href="hakkimizda.html" class="waves-effect "><i class="ti-files"></i> <span>Hakkımızda</span></a></li>
                             </ul>
