--- a/renk_ekle.html
+++ b/renk_ekle.html
@@ -72,7 +72,7 @@
                             </ul>
                         </li>
                         <li class="">
-                            <a href="personel.html" class="waves-effect "><i class="ti-user"></i> <span>Personel</span></a>
+                            <a href="musteri.html" class="waves-effect "><i class="ti-user"></i> <span>Müşteri</span></a>
                         </li>
                         <li class="">
                             <a href="rapor.html" class="waves-effect "><i class="ti-agenda"></i> <span>Rapor</span></a>
