--- a/boya_yapma.html
+++ b/boya_yapma.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="A fully featured admin theme which can be used to build CRM, CMS, etc.">
+    <meta name="author" content="Coderthemes">
     <link rel="shortcut icon" href="assets/images/favicon_1.ico">
-    <title>Oto Boya-Renk Ara</title>
+    <title>Oto Boya-Boya Yapma</title>
     <link href="assets/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css" rel="stylesheet">
     <link href="assets/plugins/switchery/dist/switchery.min.css" rel="stylesheet">
     <link href="assets/plugins/multiselect/css/multi-select.css" rel="stylesheet" type="text/css">
@@ -20,6 +20,8 @@
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="assets/css/pages.css" rel="stylesheet" type="text/css">
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
+    <!--[if lt IE 9]><script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script><![endif]-->
     <script src="assets/js/modernizr.min.js"></script>
 </head>
 
@@ -64,11 +66,11 @@
                             <a href="index.html#" class="waves-effect "><i class="ti-home"></i> <span>Anasayfa</span></a>
                         </li>
                         <li class="has_sub">
-                            <a href="" class="waves-effect"><i class="ti-paint-bucket"></i><span class="label label-success pull-right">3</span><span>Renk</span></a>
+                            <a href="" class="waves-effect active"><i class="ti-paint-bucket"></i><span class="label label-success pull-right">3</span><span>Renk</span></a>
                             <ul class="list-unstyled">
                                 <li><a href="renk_ekle.html" class="waves-effect "><i class="ti-plus"></i> <span>Renk Ekle</span></a></li>
-                                <li><a href="renk_ara.html" class="waves-effect active"><i class="ti-search"></i> <span>Renk Ara</span></a></li>
-                                <li><a href="boya_yapma.html" class="waves-effect "><i class="ti-paint-roller"></i> <span>Boya Yap </span></a></li>
+                                <li><a href="renk_ara.html" class="waves-effect "><i class="ti-search"></i> <span>Renk Ara</span></a></li>
+                                <li><a href="boya_yapma.html" class="waves-effect active"><i class="ti-paint-roller"></i> <span>Boya Yap </span></a></li>
                             </ul>
                         </li>
                         <li class="">
@@ -86,25 +88,6 @@
                                 <li><a href="hakkimizda.html" class="waves-effect "><i class="ti-files"></i> <span>Hakkımızda</span></a></li>
                             </ul>
                         </li>
-
-
-                        <!-- Multi Level Menu
-                        
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect"><i class="ti-share"></i><span>Multi Level</span></a>
-                            <ul>
-                                <li class="has_sub">
-                                    <a href="javascript:void(0);" class="waves-effect"><span>Menu Level 1.1</span></a>
-                                    <ul style="">
-                                        <li><a href="javascript:void(0);"><span>Menu Level 2.1</span></a></li>
-                                        <li><a href="javascript:void(0);"><span>Menu Level 2.2</span></a></li>
-                                        <li><a href="javascript:void(0);"><span>Menu Level 2.3</span></a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="javascript:void(0);"><span>Menu Level 1.2</span></a></li>
-                            </ul>
-                        </li>
-                        -->
                     </ul>
                     <div class="clearfix"></div>
                 </div>
@@ -127,53 +110,75 @@
                         <div class="col-lg-12">
                             <div class="panel panel-border panel-inverse">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title">Arama Sayfası</h3>
-                                    <p><small>Aramak istediğiniz başlığı ilgili alanlara yazarak arayınız</small></p>
+                                    <h3 class="panel-title">Boya Ekle</h3>
                                 </div>
                                 <div class="panel-body">
-                                    <div class="row">
-                                        <div class="col-lg-4">
-                                            <input type="text" class="form-control" placeholder="Renk Adı">
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <input type="text" class="form-control" placeholder="Renk Üretici">
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <input type="text" class="form-control" placeholder="Renk Tipi">
-                                        </div>
-                                    </div>
-                                    <br>
-                                    <div class="row">
-                                        <div class="col-lg-4">
-                                            <input type="text" class="form-control" placeholder="Katalog">
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <input type="number" class="form-control" placeholder="Marka">
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <input type="text" class="form-control" placeholder="Model">
-                                        </div>
-                                    </div>
-                                    <br>
-                                    <div class="row">
-                                        <div class="col-lg-4">
-                                            <input type="text" class="form-control" placeholder="Kod">
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <input type="number" class="form-control" placeholder="Yıl">
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <input type="text" class="form-control" placeholder="Minimum Miktarı">
-                                        </div>
-                                    </div>
-                                    <br>
-                                    <div class="row">
-                                        <div class="col-lg-6 col-lg-offset-3">
-                                            <div class="text-center">
-                                                <button class="btn btn-custom btn-default w-lg">Ara</button>
+                                    <form action="" class="form-horizantal" role="form">
+                                        <!--Dropdown Başlangıç-->
+                                        <div class="row">
+                                            <div class="col-lg-4">
+                                                <div class="form-group">
+                                                    <div class="">
+                                                        <select class="form-control select2">
+                                                            <option>Boya Seç</option>
+                                                            <option value="AK">Siyah</option>
+                                                            <option value="HI">Kırmızı</option>
+                                                            <option value="HI">Mavi</option>
+                                                            <option value="HI">Yeşil</option>
+                                                            <option value="HI">Beyaz</option>
+                                                            <optgroup label="Gruplu Hali">
+                                                                <option value="CT">Cyan</option>
+                                                                <option value="DE">Magenta</option>
+                                                                <option value="FL">Yavru Ağzı</option>
+                                                            </optgroup>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="form-group">
+                                                    <div class="">
+                                                        <select class="form-control select2">
+                                                            <option>Effect Seç</option>
+                                                            <option value="AK">Siyah</option>
+                                                            <option value="HI">Kırmızı</option>
+                                                            <option value="HI">Mavi</option>
+                                                            <option value="HI">Yeşil</option>
+                                                            <option value="HI">Beyaz</option>
+                                                            <optgroup label="Gruplu Hali">
+                                                                <option value="CT">Cyan</option>
+                                                                <option value="DE">Magenta</option>
+                                                                <option value="FL">Yavru Ağzı</option>
+                                                            </optgroup>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <input type="text" class="form-control" disabled>
                                             </div>
                                         </div>
-                                    </div>
+                                        <!--Dropdown Bitiş-->
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <input type="text" class="form-control" placeholder="Müşteri Adı Soyadı">
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <input type="number" class="form-control" placeholder="Gram">
+                                            </div>
+                                        </div>
+                                        <br>
+                                        <div class="row">
+                                            <div class="col-lg-6 col-lg-offset-3">
+                                                <div class="text-center">
+                                                    <button class="btn btn-custom btn-default w-lg">Ekle</button>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                        <br>
+                                    </form>
+                                    <br>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +190,7 @@
                         <div class="col-lg-12">
                             <div class="panel panel-border panel-inverse">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title">Arama Sonuçları <small>( 34 adet sonuç bulundu)</small></h3>
+                                    <h3 class="panel-title">Boya Lİste</h3>
                                 </div>
                                 <div class="panel-body">
                                     <div class="row">
@@ -195,57 +200,30 @@
                                                     <thead>
                                                         <tr>
 
-                                                            <th>Adı</th>
-                                                            <th>Üretici</th>
-                                                            <th>Tipi</th>
-                                                            <th>Katalog</th>
-                                                            <th>Marka</th>
-                                                            <th>Model</th>
-                                                            <th>Kod</th>
-                                                            <th>Yıl</th>
-                                                            <th>Min. Miktarı</th>
+                                                            <th>M.Adı Soyadı</th>
+                                                            <th>Boya</th>
+                                                            <th>Effect</th>
+                                                            <th>Gram</th>
                                                             <th style="width: 80px">İşlem</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
                                                         <tr>
+                                                            <td>Sinan BORA</td>
                                                             <td>Siyah</td>
-                                                            <td>Mavikent</td>
-                                                            <td>Tip 1</td>
-                                                            <td>Katalog 1</td>
-                                                            <td>Mercedes</td>
-                                                            <td>CLK</td>
-                                                            <td>Ax23</td>
-                                                            <td>2014</td>
+                                                            <td>Effect 1</td>
                                                             <td>100 gr</td>
+
                                                             <td>
                                                                 <a href="" class="table-action-btn"><i class="md md-edit"></i></a>
                                                             </td>
                                                         </tr>
                                                         <tr>
+                                                            <td>Sinan BORA</td>
                                                             <td>Siyah</td>
-                                                            <td>Mavikent</td>
-                                                            <td>Tip 1</td>
-                                                            <td>Katalog 1</td>
-                                                            <td>Mercedes</td>
-                                                            <td>CLK</td>
-                                                            <td>Ax23</td>
-                                                            <td>2014</td>
+                                                            <td>Effect 1</td>
                                                             <td>100 gr</td>
-                                                            <td>
-                                                                <a href="" class="table-action-btn"><i class="md md-edit"></i></a>
-                                                            </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Siyah</td>
-                                                            <td>Mavikent</td>
-                                                            <td>Tip 1</td>
-                                                            <td>Katalog 1</td>
-                                                            <td>Mercedes</td>
-                                                            <td>CLK</td>
-                                                            <td>Ax23</td>
-                                                            <td>2014</td>
-                                                            <td>100 gr</td>
+
                                                             <td>
                                                                 <a href="" class="table-action-btn"><i class="md md-edit"></i></a>
                                                             </td>
@@ -264,7 +242,7 @@
 
                 </div>
             </div>
-            <footer class="footer text-right">©2016 Mavikent Bilişim.</footer>
+            <footer class="footer text-right">2015 © Ubold.</footer>
         </div>
     </div>
     <script>
